--- a/MediaAISystem/package.json
+++ b/MediaAISystem/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@alicloud/imageenhan-2019-09-30": "^2.0.0",
     "@alicloud/imagerecog-2019-09-30": "^1.3.0",
+    "@alicloud/imageseg-2019-12-30": "^1.0.1",
     "@alicloud/objectdet-2019-12-30": "^1.1.0",
     "@alicloud/pop-core": "^1.7.9",
     "ali-oss": "^6.5.1",
